# impala

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CREDITS.TXT  LICENSE.TXT  README.md  TypeTable.cpp  TypeTable.h  ackermann.impala  add_one.impala  any.impala  args.h  array.impala  array_mini.impala  ast.cpp  ast.h  ast2air.cpp  ast2air.h  binding.cpp  binding.h  bla.impala  blocked_loop.impala  blocked_loop2.impala  blub.impala  break.impala  broken_tuple.impala  cascade.impala  ccall.impala  cfg.cpp  cfg.h  codegen.cpp  cont.impala  continuation.impala  cse.impala  dead.impala  defs.ml  diderot.impala  (+125 more)
docs/: index.md
src/: CMakeLists.txt  ast.cpp  ast.h  emit.cpp  init.cpp  parser.cpp  prec.h  sema.h  type.cpp
src/impala/: CMakeLists.txt  args.h  ast.cpp  ast.h  ast_stream.cpp  cgen.cpp  cgen.h  dump.cpp  dump.h  emit.cpp  impala.cpp  impala.h  init.cpp  init.h  lexer.cpp  lexer.h  loc.cpp  loc.h  location.cpp  location.h  main.cpp  mpigen.cpp  mpigen.h  parser.cpp  parser.h  prec.cpp  prec.h  sema.cpp  stream.cpp  stream.h  symbol.cpp  symbol.h  token.cpp  token.h  tokenlist.h  type.cpp  type.h
src/impala/sema/: borrow_checker.cpp  borrowsema.cpp  check.cpp  check.h  equal.cpp  errorhandler.cpp  errorhandler.h  generic.cpp  generic.h  infersema.cpp  lifetimesema.cpp  lvaluemap.h  lvmap.cpp  lvmap.h  lvtree.h  movesema.cpp  namesema.cpp  primtypes.h  scopetable.cpp  scopetable.h  to_string.cpp  trait.cpp  trait.h  type.cpp  type.h  type_table.h  typeequal.cpp  typeproperties.cpp  typeproperties.h  typesema.cpp  typetable.cpp  typetable.h  unifiable.cpp  unifiable.h  verify.cpp
src/intrinsicgen/: CMakeLists.txt  main.cpp
src/thorin/util/: location.cpp  location.h  symbol.cpp  symbol.h
test/: CMakeLists.txt  ackermann.impala  address.impala  address_array.impala  agg.impala  any.impala  array.impala  array_mini.impala  blocked_loop2.impala  break.impala  cascade.impala  cast.impala  concurrentTest.py  concurrent_run.py  continuation.impala  conversion_trait_example.impala  cse.impala  diderot.impala  do_while.impala  double_continue.impala  double_store.impala  endless_loop.impala  endless_mangling.impala  error_cannot_infer_type.impala  error_sigurd.impala  error_type_swap.impala  extern.impala  fac_loop.impala  fac_naive.impala  fac_nest.impala  ffi.cpp  ffi.h  fib.impala  fix_output.sh  for.impala  for_continue.impala  foreach5.impala  foreach_break.impala  foreach_primes.impala  generics.impala  (+40 more)
test/cconv/: ho_codegen_bug.impala  loop.impala  papp.impala
test/cconv/escape_ana/: counter.impala  esc_by_extern.impala  eta2.impala  eta_same_call.impala  ho_extern.impala  list_iter.impala  nonlocal_ret.impala  real_m.impala
test/cconv/firstclass_conts/: evil_loop_nested.impala  exn_with_fv2.impala  nested_while_true.impala  non_local_tailcall.impala  outer_as_cont.impala
test/cconv/scalarize/: sca_array.impala
test/cconv/typed_cc/: bsp2.impala  closure_rec.impala  curry.impala  fv_only_in_func.impala  higher_order_extern.impala  ho_import.impala  mut_rec3.impala  mut_rec_short.impala  nested_closure.impala  recursion.impala  relu.impala  rev_diff.impala  simple_closure.impala  simple_closure2.impala  simple_ho_arg.impala
test/codegen/: ackermann.impala  aggregate_assign_in_pe.impala  aliasing.impala  alloc_definite_array.impala  allset_bug.impala  and.impala  anonymous.impala  array.impala  bind_ret_inner_fn.impala  bitcast.impala  bool_to_signed.impala  bottom.impala  break.impala  cast.impala  cfa_out.impala  char.impala  complex_for.impala  conditionals.impala  constant_ordering_bug.impala  continue.impala  conversion_trait.impala  cur_bb_bug.impala  deep_copy.impala  diderot.impala  div_by_zero.impala  double.impala  empty_string.impala  endless_mangling.impala  endless_pe.impala  extern.impala  fac_double.impala  fac_float.impala  fac_int.impala  fac_nest.impala  fac_rec.impala  fac_tail.impala  fib.impala  fieldexpr.impala  float_literal.impala  fold.impala  (+85 more)
test/codegen/benchmarks/: aobench.impala  aobench.out  fannkuch.impala  fannkuch.output  fasta.impala  mandelbrot.impala  meteor.impala  nbody.impala  nbody.out  nbody.out.old  pidigits.impala  regex.impala  regex.out  reverse.impala  spectral.impala  tests.py
test/codegen/cconv/: ho_loop.impala
test/codegen/inline_asm/: asm_atomic_decrement.impala  asm_simple_3.impala  asm_strcpy.impala  tests.py
test/examples/: ackermann.impala  array.impala  conversion_trait.impala  diderot.impala  fac_double.impala  fac_float.impala  fac_int.impala  fac_nest.impala  fac_rec.impala  fac_tail.impala  fib.impala  fold.impala  for.impala  generator.impala  generic_while.impala  image_dsl.impala  mono_range.impala  power.impala  primes.impala  primes_for.impala  range.impala  tests.py  zip.impala
test/infrastructure/: call_impala_main.c  lib.c  pb.py  tests.py  timed_process.py  valgrindxml.py
test/parser/: tests.py
test/parser/negative/: tests.py  wrong_return.impala
test/parser/positive/: tests.py
test/partial_eval/: ackermann.impala  array.impala  blocked_loop.impala  counting_loop_problem.impala  double_loop.impala  dynamic_fun.impala  early_termination_problem.impala  higher_order_termination_problem.impala  logic_operator.impala  mut_slot_loops.impala  nested.impala  nested_loop.impala  power.impala  range.impala  runblock.impala  sorting_net_batcher.impala  sorting_net_bose_nelson.impala  two_loops.impala  unroll.impala  unroll2.impala  unroll3.impala
test/sema/: tests.py
test/sema/negative/: address_of_val_array.impala  address_of_val_array.output  anonymous.impala  anonymous.out  array_equality.impala  assign.impala  assign_no_lvalue.impala  assign_no_lvalue.out  assign_no_lvalue.output  bool_literal.impala  bound_checking1.impala  bound_checking2.impala  char.impala  char.out  char.output  constrain_check.impala  constrain_check.output  cps_call.impala  cps_call.out  cps_call.output  def_array.impala  fn_neq1.impala  fn_neq1.out  fn_neq1.output  if01.impala  if01.out  impl_bounds.impala  impl_bounds.output  (+109 more)
test/type_inference/: tests.py
(+332 files in other folders)
