add_subdirectory(impala)
if(Thorin_HAS_LLVM_SUPPORT)
    add_subdirectory(intrinsicgen)
endif()

if(MSVC)
    target_compile_definitions(impala PRIVATE -D_SCL_SECURE_NO_WARNINGS)
    target_compile_definitions(impala PRIVATE -D_CRT_SECURE_NO_WARNINGS)
    target_compile_options(impala PRIVATE "/wd4800" "/wd4520")
    target_compile_options(impala PRIVATE "/experimental:external" "/external:anglebrackets" "/external:W0")
else()
    target_compile_options(impala PRIVATE "-Wall" "-Wextra")
endif()
