SET ( EXECUTABLE_NAME exe_intrinsicgen )

# get source files
FILE ( GLOB SOURCES *.cpp *.h )

ADD_EXECUTABLE( ${EXECUTABLE_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES ( ${EXECUTABLE_NAME} ${THORIN_LIBS} lib_impala )
ADD_DEPENDENCIES ( ${EXECUTABLE_NAME} lib_impala )

SET_TARGET_PROPERTIES(exe_intrinsicgen PROPERTIES OUTPUT_NAME intrinsicgen)
