SET ( EXECUTABLE_NAME exe_intrinsicgen )

ADD_EXECUTABLE( ${EXECUTABLE_NAME} main.cpp )
TARGET_LINK_LIBRARIES ( ${EXECUTABLE_NAME} ${THORIN_LIBRARIES} lib_impala )
ADD_DEPENDENCIES ( ${EXECUTABLE_NAME} lib_impala )

SET_TARGET_PROPERTIES(exe_intrinsicgen PROPERTIES OUTPUT_NAME intrinsicgen)
SET_TARGET_PROPERTIES(exe_intrinsicgen PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)
